# coinjoin-emulator

./: .dockerignore  .gitignore  Dockerfile  FEATURE_TODO.md  README.md  TODO.md  createPythonVirtualEnvironment.sh  managePythonVirtualEnvironment.sh  manager.py  mypy.ini  newCommits.md  pyproject.toml  requirements-dev.txt  test-all-locally.sh
.codex/skills/coinjoin-reading-guide/: SKILL.md
.codex/skills/repo-python-tests/: SKILL.md
.github/workflows/: btc-node.yaml  irc-server.yaml  joinmarket-client-server.yaml  main.yaml  static-analysis.yaml  wasabi-backend.yaml  wasabi-clients.yaml  wasabi-coordinator.yaml
containers/btc-node/: Dockerfile  bitcoin.conf  run.sh
containers/joinmarket-client-server/: Dockerfile  jmwalletd_entrypoint.py  joinmarket.cfg  patch_descriptor_regtest.py  run.sh
containers/wasabi-backend/2.0.4/: Dockerfile
containers/wasabi-backend/2.6.0/: Config.json  (+2 more)
manager/: application.py  btc_node.py  cli.py  exceptions.py  log_output.py  utils.py  wasabi_backend.py  wasabi_backend_26.py  wasabi_backend_factory.py  wasabi_backend_protocol.py  wasabi_coordinator.py  wasabi_coordinator_protocol.py
manager/commands/: genscen.py
manager/driver/: __init__.py  docker.py  kubernetes.py  podman.py
manager/engine/: configuration.py  engine_base.py  joinmarket_engine.py  wasabi_engine.py
manager/wasabi_clients/: __init__.py  joinmarket_client.py  wasabi_client_base.py  wasabi_client_v1.py  wasabi_client_v2.py  wasabi_client_v204.py  wasabi_client_v26.py
scenarios/: overactive-local.json
stubs/docker/: __init__.pyi  errors.pyi
stubs/jmclient/: __init__.pyi  blockchaininterface.pyi
stubs/kubernetes/: __init__.pyi
stubs/numpy/: __init__.pyi  random.pyi
stubs/requests/: __init__.pyi
stubs/urllib3/: __init__.pyi
tests/: __init__.py  conftest.py  joinmarket_helpers.py  test_application.py  test_btc_node.py  test_cli.py  test_configuration.py  test_default_joinmarket_scenario.py  test_docker_driver.py  test_engine_base.py  test_historical_archive_integration.py  test_historical_run_archives.py  test_joinmarket_client.py  test_joinmarket_descriptor_patch.py  test_joinmarket_engine.py  test_joinmarket_environment.py  test_joinmarket_events.py  test_joinmarket_funding.py  test_joinmarket_jmwalletd_entrypoint.py  test_joinmarket_lifecycle.py  test_joinmarket_maker.py  test_joinmarket_rpc.py  test_joinmarket_runner.py  test_joinmarket_scenario.py  test_joinmarket_taker.py  test_joinmarket_wallet.py  test_kubernetes_driver.py  test_log_output.py  test_manager.py  test_podman_driver.py  test_wasabi_client_base.py
(+33 files in other folders)
